Prepare Java 25 and MapLibre Native FFI dependency resolution
Step 2 of DESKTOP_FFI_REWRITE.md.

Splits the single jvmTarget property into androidJvmTarget (still 11) and
desktopJvmTarget (25), and raises the shared toolchain to 25. The FFI binding
ships Java 24 bytecode and uses FFM, so desktop cannot go lower; Android
bytecode is unchanged, verified as class file major 55. buildSrc pins 25
separately because it cannot read the root gradle.properties.

Adds the Central Portal snapshot repository scoped to org.maplibre.nativeffi,
catalog entries for the binding and both runtime backends, and the FFI binding
as a desktopMain dependency of the library. The application, not the library,
selects the native runtime.

DesktopHostPlatform replaces the deleted Configuration/DesktopVariant logic as
the single host detector: it maps the host to a natives classifier and the
Metal-on-macOS / Vulkan-elsewhere backend split, and errors rather than
guessing on an unpublished platform.

Adds --enable-native-access=ALL-UNNAMED to the demo application (covering both
`run` and packaged distributions) and to desktop test tasks, and documents it
for consumers running an unpackaged JVM.

checkDesktopFfiRuntime asserts the desktop runtime classpath carries exactly
one binding and exactly one native runtime matching this host, so a
misconfigured runtime fails at build time rather than at map creation.